package model;

public class Sistema {
    public void requerirUbicacion() {}
    public boolean validarCoordenadas(double lat, double lng) { return true; }
    public void devolverUbicacion(double lat, double lng) {}
    public void devolverFallo(String tipoError) {}
}
