@startuml
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor #f9f9f9
  BorderColor #2a2a2a
  FontName Helvetica
}

'=== Diagrama general de clases (UC1, UC2, UC3) ===
class Hogar {
  id
  nombreContacto
  direccionTexto
  permisosGPS : boolean
}

class Solicitud {
  id
  fechaHora
  tipoMaterial
  cantidad
  estado
}

class Coordenada {
  lat
  lng
}

class ZonaCobertura {
  id
  nombre
}

class Comprobante {
  id
  fecha
  medioEntrega
}

class Sistema {
  +requerirUbicacion()
  +validarCoordenadas(lat, lng)
  +devolverUbicacion(lat, lng)
  +devolverFallo(tipoError)
}

class ServicioDeGeolocalizacion <<externalService>> {
  +solicitarCoordenadas()
  +devolverCoordenadas(lat, lng)
  +errorServiciosDesactivados()
  +errorPermisosDenegados()
}

class CentralDeRecoleccion {
  id
  nombre
  generarRutas()
  actualizarRuta()
  generarReporte(tipo, filtros)
}

class Ruta {
  id
  fecha
  estado
}

class PuntoRuta {
  orden
  horaEstimada
  estadoVisita
}

class Recolector {
  id
  nombre
}

class Camion {
  id
  patente
  capacidad
}

class Alerta {
  id
  tipo
  detalle
  fecha
}

class Reporte {
  id
  tipo
  periodo
  contenido
  formatoExportacion
}

' --- Relaciones principales (combinando UC1, UC2 y UC3) ---
Hogar "1" -- "0..*" Solicitud
Solicitud "1" -- "1" Coordenada
Solicitud "1" -- "1" ZonaCobertura
Solicitud "1" -- "0..1" Comprobante
Solicitud "0..1" -- "1" Ruta : asignada
ZonaCobertura "1" -- "0..*" Hogar

Sistema "1" -- "0..*" Solicitud : coordina >
Sistema ..> ServicioDeGeolocalizacion : utiliza >
ServicioDeGeolocalizacion ..> Coordenada : genera >

CentralDeRecoleccion "1" -- "0..*" Ruta
Ruta "1" -- "1..*" PuntoRuta
PuntoRuta "0..1" -- "1" Solicitud
Ruta "1" -- "0..*" Recolector
Ruta "1" -- "1" Camion

CentralDeRecoleccion "1" -- "0..*" Reporte
Reporte "1" -- "0..*" Alerta
Alerta "*" --> "1" Ruta
Alerta "*" --> "0..1" Camion

note right of ServicioDeGeolocalizacion
  Servicio externo para obtener y validar
  coordenadas a partir de direccion o GPS.
end note

note left of Reporte
  Consolida informacion de Solicitud,
  Ruta, PuntoRuta y Alertas segun filtros.
end note

@enduml
